<resources>
    <string name="app_name">Tolomet</string>
    <string name="menu_settings">Ajustes</string>
    <string name="title_activity_tolomet">Tolomet</string>
    <string name="Refresh">Actualizar</string>
    <string name="Settings">Ajustes</string>
    <string name="station_prompt">Estación</string>
    <string name="summary"></string>
    <string name="Direction">Dirección</string>
    <string name="DirectionHumidity">Dirección y Humedad</string>
    <string name="Air">Aire</string>
    <string name="Humidity">Humedad</string>
    <string name="Speed">Velocidad</string>
    <string name="Wind">Viento</string>
    <string name="Downloading">Descargando</string>
    <string name="Progress">Progreso</string>
    <string name="About">Acerca de &#8230;</string>
    <string name="Time">Hora</string>
    <string name="Degrees">Grados</string>
    <string name="Impatient">¡Impaciente!, las lecturas son cada</string>
    <string name="minutes">minutos</string>
    <string name="star">favorito</string>
    <string name="NoData">No hay datos</string>
    <string name="NoNetwork">No tienes conexión a internet</string>
    <string name="DownloadCancelled">Descarga cancelada</string>
    <string name="motd">Mensaje del día</string>
    <string name="tomorrow">Mañana</string>
    <string name="update">Actualizar</string>
    <string name="improvements">Mejoras</string>
    <string name="newversion">¡Nueva versión disponible!</string>
    <string name="menu_all">Todas las estaciones</string>
    <string name="menu_ccaa">Comunidades autónomas</string>
    <string name="menu_reg">Estados</string>
    <string name="menu_country">Países</string>
    <string name="menu_close">Estaciones cercanas</string>
    <string name="menu_fav">Estaciones favoritas</string>
    <string name="menu_index">Índice de estaciones</string>
    <string name="menu_start">Menú inicio</string>
    <string name="select">Selecciona</string>    
    <string name="markerNorth">0º (N)</string>
    <string name="markerSouth">180º (S)</string>
    <string name="markerEast">90º (E)</string>
    <string name="markerWest">270º (O)</string>
    <string name="pref_minMarker">Marcador #1</string>
    <string name="pref_maxMarker">Marcador #2</string>        
    <string name="pref_catWind">Gráfica de viento</string>
    <string name="pref_catAir">Gráfica de aire</string>
    <string name="pref_speedRange">Rango de velocidad</string>
    <string name="pref_minMarkerDefault">10</string>
    <string name="pref_maxMarkerDefault">30</string>
    <string name="pref_speedRangeDefault">40</string>    
    <string name="pref_minTemp">Temperatura mínima</string>
    <string name="pref_minTempDefault">0</string>
    <string name="pref_maxTemp">Temperatura máxima</string>
    <string name="pref_maxTempDefault">40</string>
    <string name="pref_minPres">Presión mínima</string>
    <string name="pref_minPresDefault">980</string>
    <string name="pref_maxPres">Presión máxima</string>
    <string name="pref_maxPresDefault">1030</string>
    <string name="warn_gps">Activa primero el servicio de localización y vuelve a intentarlo</string>
    <string name="gps_ok">Activar</string>
    <string name="cancel">Cancelar</string>
    <string name="error_gps">Localización desconocida</string>
    <string name="warn_fav">Primero deberías marcar algunas estaciones como favoritas</string>
    <string name="fav_ok">OK</string>
    <string name="pref_modes">Modos de funcionamiento</string>
    <string name="pref_modeGraphs">Visualización</string>
    <string name="pref_modeGraphsDefault">0</string>
    <string name="pref_modeUpdate">Actualización de lecturas</string>
    <string name="pref_modeUpdateDefault">1</string>
</resources>
